--- a/listings-product/trips.html
+++ b/listings-product/trips.html
@@ -790,23 +790,23 @@
                                               </div>
                                               <div class="ccf8p5q dir dir-ltr">
                                                 <div
-                                                  class="gjz9tiy dir dir-ltr"
+                                                  class="hero-card-wrapper dir dir-ltr"
                                                 >
                                                   <div
-                                                    class="g1ljmos8 dir dir-ltr"
+                                                    class="hero-card dir dir-ltr"
                                                   >
                                                     <div
-                                                      class="cj9jr2o dir dir-ltr"
+                                                      class="hero-card__inner dir dir-ltr"
                                                     >
                                                       <a
                                                         data-testid="trip-card"
                                                         href="/trips/v1/565d4553-a9c6-43f8-994d-19fae732d61c/ro/EXPERIENCE_RESERVATION/9568880"
                                                         class="button-container__wrapper"
                                                         ><div
-                                                          class="c1ab4kh2 dir dir-ltr"
+                                                          class="hero-card__inner-2 dir dir-ltr"
                                                         >
                                                           <div
-                                                            class="pptaptv dir dir-ltr"
+                                                            class="hero-card__img dir dir-ltr"
                                                           >
                                                             <div
                                                               class="img-middle"
@@ -865,10 +865,10 @@
                                                               ></div>
                                                             </div>
                                                             <div
-                                                              class="krt5o27 dir dir-ltr"
+                                                              class="hero-card__img-title dir dir-ltr"
                                                             >
                                                               <span
-                                                                class="_e8yefda"
+                                                                class="tl-text-sm"
                                                                 style="
                                                                   --tl-color: #222222;
                                                                   --tl-font-size: 14px;
@@ -882,16 +882,16 @@
                                                             </div>
                                                           </div>
                                                           <div
-                                                            class="t15kgfic dir dir-ltr"
+                                                            class="hero-card__body dir dir-ltr"
                                                           >
                                                             <div
-                                                              class="tkmrifx dir dir-ltr"
+                                                              class="m-6 dir dir-ltr"
                                                             >
                                                               <div
-                                                                class="t1fl57ov dir dir-ltr"
+                                                                class="mb-6 dir dir-ltr"
                                                               >
                                                                 <h3
-                                                                  class="t1x7kc86 dir dir-ltr"
+                                                                  class="mb-0 dir dir-ltr"
                                                                 >
                                                                   <span
                                                                     class="mobile-banner__text"
@@ -909,10 +909,10 @@
                                                                   >
                                                                 </h3>
                                                                 <div
-                                                                  class="sgctd8i dir dir-ltr"
+                                                                  class="mt-1.5 dir dir-ltr"
                                                                 >
                                                                   <span
-                                                                    class="_e8yefda"
+                                                                    class="tl-text-sm"
                                                                     style="
                                                                       --tl-color: #222222;
                                                                       --tl-font-size: 14px;
@@ -928,13 +928,13 @@
                                                                 </div>
                                                               </div>
                                                               <div
-                                                                class="d1fngnvj dir dir-ltr"
+                                                                class="hero-card__footer dir dir-ltr"
                                                               >
                                                                 <div
-                                                                  class="lomse6a dvrhnu7 dir dir-ltr"
+                                                                  class="hero-card__margin hero-card__footer-inner dir dir-ltr"
                                                                 >
                                                                   <span
-                                                                    class="_6mwb4c"
+                                                                    class="tl-text-sm"
                                                                     style="
                                                                       --tl-color: #222222;
                                                                       --tl-font-size: 18px;
@@ -944,7 +944,7 @@
                                                                     >10:00&nbsp;PM
                                                                     Nov 26</span
                                                                   ><span
-                                                                    class="_158ouaov"
+                                                                    class="tl-text-sm"
                                                                     style="
                                                                       --tl-color: #222222;
                                                                       --tl-font-size: 14px;
@@ -956,10 +956,10 @@
                                                                   >
                                                                 </div>
                                                                 <div
-                                                                  class="t1scrubd dvrhnu7 dir dir-ltr"
+                                                                  class="hero-card__right hero-card__footer-inner dir dir-ltr"
                                                                 >
                                                                   <span
-                                                                    class="_6mwb4c"
+                                                                    class="tl-text-sm"
                                                                     style="
                                                                       --tl-color: #222222;
                                                                       --tl-font-size: 18px;
@@ -968,7 +968,7 @@
                                                                     "
                                                                   ></span
                                                                   ><span
-                                                                    class="_158ouaov"
+                                                                    class="tl-text-sm"
                                                                     style="
                                                                       --tl-color: #222222;
                                                                       --tl-font-size: 14px;
@@ -985,11 +985,6 @@
                                                         </div></a
                                                       >
                                                     </div>
-                                                  </div>
-                                                  <div
-                                                    class="g18gm2rc dir dir-ltr"
-                                                  >
-                                                    <div></div>
                                                   </div>
                                                 </div>
                                               </div>
@@ -2071,18 +2066,18 @@
                                           </h2>
                                         </div>
                                         <div class="ccf8p5q dir dir-ltr">
-                                          <div class="gjz9tiy dir dir-ltr">
-                                            <div class="g1ljmos8 dir dir-ltr">
-                                              <div class="cj9jr2o dir dir-ltr">
+                                          <div class="hero-card-wrapper dir dir-ltr">
+                                            <div class="hero-card dir dir-ltr">
+                                              <div class="hero-card__inner dir dir-ltr">
                                                 <a
                                                   data-testid="trip-card"
                                                   href="/trips/v1/565d4553-a9c6-43f8-994d-19fae732d61c/ro/EXPERIENCE_RESERVATION/9568880"
                                                   class="button-container__wrapper"
                                                   ><div
-                                                    class="c1ab4kh2 dir dir-ltr"
+                                                    class="hero-card__inner-2 dir dir-ltr"
                                                   >
                                                     <div
-                                                      class="pptaptv dir dir-ltr"
+                                                      class="hero-card__img dir dir-ltr"
                                                     >
                                                       <div
                                                         class="img-middle"
@@ -2141,10 +2136,10 @@
                                                         ></div>
                                                       </div>
                                                       <div
-                                                        class="krt5o27 dir dir-ltr"
+                                                        class="hero-card__img-title dir dir-ltr"
                                                       >
                                                         <span
-                                                          class="_e8yefda"
+                                                          class="tl-text-sm"
                                                           style="
                                                             --tl-color: #222222;
                                                             --tl-font-size: 14px;
@@ -2157,16 +2152,16 @@
                                                       </div>
                                                     </div>
                                                     <div
-                                                      class="t15kgfic dir dir-ltr"
+                                                      class="hero-card__body dir dir-ltr"
                                                     >
                                                       <div
-                                                        class="tkmrifx dir dir-ltr"
+                                                        class="m-6 dir dir-ltr"
                                                       >
                                                         <div
-                                                          class="t1fl57ov dir dir-ltr"
+                                                          class="mb-6 dir dir-ltr"
                                                         >
                                                           <h3
-                                                            class="t1x7kc86 dir dir-ltr"
+                                                            class="mb-0 dir dir-ltr"
                                                           >
                                                             <span
                                                               class="mobile-banner__text"
@@ -2183,10 +2178,10 @@
                                                             >
                                                           </h3>
                                                           <div
-                                                            class="sgctd8i dir dir-ltr"
+                                                            class="mt-1.5 dir dir-ltr"
                                                           >
                                                             <span
-                                                              class="_e8yefda"
+                                                              class="tl-text-sm"
                                                               style="
                                                                 --tl-color: #222222;
                                                                 --tl-font-size: 14px;
@@ -2201,13 +2196,13 @@
                                                           </div>
                                                         </div>
                                                         <div
-                                                          class="d1fngnvj dir dir-ltr"
+                                                          class="hero-card__footer dir dir-ltr"
                                                         >
                                                           <div
-                                                            class="lomse6a dvrhnu7 dir dir-ltr"
+                                                            class="hero-card__margin hero-card__footer-inner dir dir-ltr"
                                                           >
                                                             <span
-                                                              class="_6mwb4c"
+                                                              class="tl-text-sm"
                                                               style="
                                                                 --tl-color: #222222;
                                                                 --tl-font-size: 18px;
@@ -2217,7 +2212,7 @@
                                                               >10:00&nbsp;PM Nov
                                                               26</span
                                                             ><span
-                                                              class="_158ouaov"
+                                                              class="tl-text-sm"
                                                               style="
                                                                 --tl-color: #222222;
                                                                 --tl-font-size: 14px;
@@ -2229,10 +2224,10 @@
                                                             >
                                                           </div>
                                                           <div
-                                                            class="t1scrubd dvrhnu7 dir dir-ltr"
+                                                            class="hero-card__right hero-card__footer-inner dir dir-ltr"
                                                           >
                                                             <span
-                                                              class="_6mwb4c"
+                                                              class="tl-text-sm"
                                                               style="
                                                                 --tl-color: #222222;
                                                                 --tl-font-size: 18px;
@@ -2241,7 +2236,7 @@
                                                               "
                                                             ></span
                                                             ><span
-                                                              class="_158ouaov"
+                                                              class="tl-text-sm"
                                                               style="
                                                                 --tl-color: #222222;
                                                                 --tl-font-size: 14px;
@@ -2258,9 +2253,6 @@
                                                   </div></a
                                                 >
                                               </div>
-                                            </div>
-                                            <div class="g18gm2rc dir dir-ltr">
-                                              <div></div>
                                             </div>
                                           </div>
                                         </div>
