fix explore calendar mobile footer spacing and rest of contents

--- a/listings-product/explore-when.html
+++ b/listings-product/explore-when.html
@@ -2905,9 +2905,6 @@
                                                             </div>
                                                             <div
                                                               class="m1w81bkg dir dir-ltr"
-                                                              style="
-                                                                bottom: 55px;
-                                                              "
                                                             >
                                                               <div
                                                                 class="_1ns0ggc"
@@ -2929,7 +2926,7 @@
                                                                     >
                                                                   </div>
                                                                   <div
-                                                                    class="header__search-date-options-wrapper"
+                                                                    class="header__search-date-options-wrapper hidden-scrollbar"
                                                                   >
                                                                     <div
                                                                       class="header__search-date-option-exact-dates"
